--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-spinners": "^0.15.0",
     "seedrandom": "^3.0.5",
+    "swiper": "^11.2.6",
     "tone": "^15.1.21"
   },
   "devDependencies": {
