--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "next": "15.2.4",
     "openai": "^4.94.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-spinners": "^0.15.0",
     "seedrandom": "^3.0.5",
+    "spotify-api.js": "^9.2.5",
     "swiper": "^11.2.6",
     "tone": "^15.1.21"
   },
