--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "seedrandom": "^3.0.5",
     "spotify-api.js": "^9.2.5",
     "swiper": "^11.2.6",
